# Tensor-Streaming-Inference-and-Calibration-for-Time-Synchronous-Signal-Diagnostics

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
(.github)/workflows/: ci.yml  lint.yml  microbench.yml  unit-tests.yml
data/synthetic/: README.md
docs/: datasets.md  hero_pipelines.md  index.md  quickstart.md
docs/methodology/: calibration_false_alarm_control.md  contracts_invariants.md  drift_and_retraining.md  early_detection_metrics.md  event_time_and_replay.md  glossary.md  index.md  (+5 more)
experiments/: p1_iq_readout_calibration.yaml  p1_nab_replay.yaml  p1_noise_spectroscopy_id.yaml  p1_orchestrated_replay_manifest.yaml  p1_synth_early_warning.yaml  p1_synth_rca.yaml  p2_rul_head.yaml  p3_forecast_head.yaml
notebooks/: 00_repo_tour.ipynb  01_p1_synthetic_ground_truth.ipynb  02_p1_calibration_false_alarm.ipynb  03_p1_rca_examples.ipynb  04_p1_event_time_replay.ipynb  05_p1_plus_p4_filtering.ipynb  06_p2_rul_head_demo.ipynb  07_p3_forecast_head_demo.ipynb  08_iq_readout_dsp_calibration.ipynb  09_noise_spectroscopy_system_id.ipynb  10_reproducible_runs_manifests.ipynb
paper/: manuscript.tex  references.bib
tests/: test_contracts_bounds_redundancy.py  test_event_time_watermarks.py  test_iq_dsp_calibration_invariants.py  test_noise_spectroscopy_psd_models.py  test_p1_calibration_coverage.py  test_p1_early_detection_metrics.py  test_p1_rca_ground_truth.py  test_p2_rul_coverage.py  test_p3_hierarchy_consistency.py  test_p4_filter_rmse_and_stability.py  test_replay_determinism.py  test_run_metadata_reproducibility.py  test_spectral_contracts.py
(+63 files in other folders)
