[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming-signal-platform"
version = "0.1.0"
description = "Event-time streaming + deterministic replay + calibrated early-warning + RCA, with ML and DSP modules."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Adrian Pencil"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "torch>=2.1",
]

[project.optional-dependencies]
io = [
  "pandas>=2.0",
  "pyarrow>=12.0",
]
yaml = [
  "PyYAML>=6.0",
]
viz = [
  "matplotlib>=3.7",
]
rca = [
  "networkx>=3.1",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.7",
]

[project.scripts]
ssp = "ssp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
